chore: switch slack notifier

--- a/.github/workflows/slack-notification.yaml
+++ b/.github/workflows/slack-notification.yaml
@@ -4,12 +4,17 @@ on: workflow_call
 
 jobs:  
   slack-notify:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: craftech-io/slack-action@v1
-      with:
-        slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-        slack_channel: github-notifications
-        slack_username: GitHub
-        status: failure
-        
+      name: Post Workflow Status To Slack
+      runs-on: ubuntu-latest
+      permissions:
+        actions: 'read'
+      steps:
+        - name: Slack Workflow Notification
+          uses: Gamesight/slack-workflow-status@master
+          with:
+            repo_token: ${{secrets.GITHUB_TOKEN}}
+            slack_webhook_url: ${{secrets.SLACK_WEBHOOK_URL}}
+            channel: '#github-notifications'
+            name: 'Failed GitHub Workflow'
+            icon_url: 'https://avatars0.githubusercontent.com/u/1701160?s=96&v=4'
+            
